force-app/main/default/objects/custom_create244__c/custom_create244__c.object-meta.xml
<CustomObject>
    <label>Custom created object244</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects244</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>