force-app/main/default/objects/custom_create244__c/fields/custom_create_244field515__c.field-meta.xml
<CustomField>
    <fullName>custom_create_244field515__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 244field515</label>
    <type>Checkbox</type>
</CustomField>